@@ -1,2 +1,3 @@
 add_subdirectory(en)
 add_subdirectory(hy)
+add_subdirectory(ru)
